[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/coinsspritesheet.png" type="Texture" id=1]
[ext_resource path="res://script/Coins.gd" type="Script" id=2]
[ext_resource path="res://particle/coinglint.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Coins" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="Sparkle" type="Particles2D" parent="."]
z_index = 2
emitting = false
amount = 20
lifetime = 0.2
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 0.3
[connection signal="body_entered" from="." to="." method="_on_Coins_body_entered"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
